utils scripts to change video output renaming to hdsync and cleanup

--- a/scripts/hdsync.conf
+++ b/scripts/hdsync.conf
@@ -1,5 +1,5 @@
 # ----------------------------------------------------
-# configuration file for wdhdsync
+# configuration file for hdsync
 
 # NIC to use
 ETH_IFACE=eth0
@@ -8,11 +8,8 @@ ETH_IFACE=eth0
 SYNC_ROLE=offer
 
 # where to log operations
-SYNC_LOG=/tmp/wdhdsync.log
+SYNC_LOG=/tmp/hdsync.log
 
 # fine tuning sleep
 OFFER_SLEEP=0.1
-
-
-
 
