--- a/scripts/hdsync.conf
+++ b/scripts/hdsync.conf
@@ -13,3 +13,7 @@ SYNC_LOG=/tmp/hdsync.log
 # fine tuning sleep
 OFFER_SLEEP=0.1
 
+# video output can be: default (leave unchanged)
+#                      hdmi (set HDMI auto)
+#                      composite (set comp. PAL)
+VIDEO_OUT=default
