--- a/scripts/hdsync.conf
+++ b/scripts/hdsync.conf
@@ -13,7 +13,10 @@ SYNC_LOG=/tmp/hdsync.log
 # fine tuning sleep
 OFFER_SLEEP=0.1
 
-# video output can be: default (leave unchanged)
-#                      hdmi (set HDMI auto)
-#                      composite (set comp. PAL)
-VIDEO_OUT=default
+# video channels expected
+VIDEO_CHANNELS=2
+
+# video output can be: none (will autodetect)
+#                      hdmi (set HDMI / res. auto)
+#                      composite (set comp. / format PAL)
+# VIDEO_OUT=hdmi
