fixes to support invisible.osd
and to simplify config so now HDSYNC_CHANNEL indicates the 'offer' or 'listen' role

--- a/scripts/hdsync.conf
+++ b/scripts/hdsync.conf
@@ -4,9 +4,6 @@
 # NIC to use
 ETH_IFACE=eth0
 
-# choose 'offer' or 'listen'
-SYNC_ROLE=offer
-
 # where to log operations
 SYNC_LOG=/tmp/hdsync.log
 
@@ -15,6 +12,8 @@ OFFER_SLEEP=0.1
 
 # number of this video channel
 HDSYNC_CHANNEL=1
+# be careful this number is unique across your players
+# channel 1 is always the server, others are clients
 
 # total video channels expected
 TOTAL_CHANNELS=2
