testing and fixes with upnp still need to check improvements using fw 0.4.5.3

--- a/scripts/hdsync.conf
+++ b/scripts/hdsync.conf
@@ -1,14 +1,10 @@
 # ----------------------------------------------------
 # configuration file for hdsync
 
-# NIC to use
-ETH_IFACE=eth0
-
-# where to log operations
-SYNC_LOG=/tmp/hdsync.log
-
-# fine tuning sleep
-OFFER_SLEEP=0.1
+# Network configuration to use: DYNAMIC or STATIC
+# DYNAMIC = use the DHCP daemon on LAN to assign IPs
+# STATIC = most of the time you'll need this
+HDSYNC_NETWORK=DYNAMIC
 
 # number of this video channel
 HDSYNC_CHANNEL=1
@@ -18,7 +14,3 @@ HDSYNC_CHANNEL=1
 # total video channels expected
 TOTAL_CHANNELS=2
 
-# video output can be: none (will autodetect)
-#                      hdmi (set HDMI / res. auto)
-#                      composite (set comp. / format PAL)
-# VIDEO_OUT=hdmi
