new avremote utility
a minimal C program to send upnp messages
just a start for now. will use to test speed on sync
then probably use some of its code to implement hdsync in C and Upnp

this will likely become a standalone utility if some other people gets
interested

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,5 @@
-bin_PROGRAMS = netcat broadcaster
+bin_PROGRAMS = netcat broadcaster avremote
+
 netcat_SOURCES = \
 	core.c \
 	flagset.c \
@@ -9,6 +10,8 @@ netcat_SOURCES = \
 	udphelper.c
 
 broadcaster_SOURCES = broadcaster.cpp
+
+avremote_SOURCES = avremote.c
 
 netcat_nc = $(DESTDIR)$(bindir)/nc
 
