fixes to looping and various other things

--- a/scripts/hdsync.conf
+++ b/scripts/hdsync.conf
@@ -11,6 +11,8 @@ HDSYNC_CHANNEL=1
 # be careful this number is unique across your players
 # channel 1 is always the server, others are clients
 
+HDSYNC_SLEEP=0
+
 # total video channels expected
 TOTAL_CHANNELS=2
 
