fixed sync playback loop
still plays only once, to be fixed the loop

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ depcomp
 install-sh
 missing
 stamp-h1
-wdhdsync-loop
-wdhdsync.app
-wdhdsync.app.bin
-wdlxtv_optware.app.bin
+hdsync-loop
+hdsync.app
+hdsync.app.bin
