Watchdog script and fixes  contributed by Michael van Rosmalen
 - WATCHDOGTIMER can be set in the hdsync.conf file
 - HDSYNC_SLEEP is now in micro seconds instead of seconds to
   compensate for hardware differences
 - HDSYNC_NETWORK can be set to MANUAL in the hdsync.conf file
   more redundant network synchronization

--- a/scripts/hdsync.conf
+++ b/scripts/hdsync.conf
@@ -3,7 +3,8 @@
 
 # Network configuration to use: DYNAMIC or STATIC
 # DYNAMIC = use the DHCP daemon on LAN to assign IPs
-# STATIC = most of the time you'll need this
+# STATIC = auto-configure IPs for LAN (use this if you don't know)
+# MANUAL = don't change the current configuration
 HDSYNC_NETWORK=DYNAMIC
 
 # number of this video channel
@@ -16,3 +17,8 @@ HDSYNC_SLEEP=0
 # total video channels expected
 TOTAL_CHANNELS=2
 
+# watchdog activation
+# if you like to run an additional watchdog process to look over
+# the playback and avoid long-term freezes, fill in here the duration
+# of the video in seconds, approximated to the minimum (experimental feature)
+# WATCHDOGTIMER=360
